--- a/TableViewExercise/Base.lproj/TableCollection.storyboard
+++ b/TableViewExercise/Base.lproj/TableCollection.storyboard
@@ -1,77 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="40H-NB-Xwr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mo5-wY-H2e">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--TableView-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainController" customModule="TableViewExercise" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="br8-QJ-W7h">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="q0Y-8B-hZ0">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="q0Y-8B-hZ0" id="Wtg-TG-Dhr">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="DXm-eY-PB0" kind="show" id="Xjj-Fu-OTK"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="CfB-4T-Zct"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="VJd-AC-0Wi"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="br8-QJ-W7h" secondAttribute="bottom" id="CSD-Mm-9d1"/>
-                            <constraint firstItem="br8-QJ-W7h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UEW-RZ-0wU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="br8-QJ-W7h" secondAttribute="trailing" id="XWA-yL-via"/>
-                            <constraint firstItem="br8-QJ-W7h" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="iQY-df-tYL"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="TableView" id="iJT-KX-tg7"/>
-                    <connections>
-                        <outlet property="tableView" destination="br8-QJ-W7h" id="SF8-rc-28g"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-257.97101449275362" y="81.696428571428569"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="ukI-88-Vha">
-            <objects>
-                <viewController id="DXm-eY-PB0" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0de-Wk-cxT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="j58-y6-MLJ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="5J4-jE-zIE"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="28D-UC-Xj5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="519" y="82"/>
-        </scene>
         <!--TableView-->
         <scene sceneID="g3S-eM-nMv">
             <objects>
@@ -151,32 +87,110 @@
                             <outlet property="delegate" destination="mo5-wY-H2e" id="geC-Gi-PXj"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="TableView" id="pOa-JY-fdp"/>
+                    <navigationItem key="navigationItem" title="TableView" id="pOa-JY-fdp">
+                        <barButtonItem key="rightBarButtonItem" title="Collection" id="D4j-fO-YGv">
+                            <connections>
+                                <segue destination="aGO-X0-yXZ" kind="show" id="Z1z-2T-J4r"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="t0c-3y-tVv">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IOZ-El-5mD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-259.4202898550725" y="805.58035714285711"/>
+            <point key="canvasLocation" x="-299" y="813"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Avx-Iu-Qsv">
+        <!--Collection Controller-->
+        <scene sceneID="71E-9s-Hih">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9So-uU-LIB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="40H-NB-Xwr" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NbC-T5-m9J">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="mo5-wY-H2e" kind="relationship" relationship="rootViewController" id="YGm-xH-POy"/>
-                    </connections>
-                </navigationController>
+                <collectionViewController id="aGO-X0-yXZ" customClass="CollectionController" customModule="TableViewExercise" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Tk1-rk-SLV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fiY-pY-kFM">
+                            <size key="itemSize" width="108" height="91"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="9G2-Z7-5ls" customClass="UserCollectionCell" customModule="TableViewExercise" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="108" height="91"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="YQD-x1-dft">
+                                    <rect key="frame" x="0.0" y="0.0" width="108" height="91"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HV4-Ic-vFd">
+                                            <rect key="frame" x="4" y="8" width="100" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="r9g-GE-Ykg"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7C-M2-ffW">
+                                            <rect key="frame" x="16" y="47" width="46" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="tvJ-Ud-TuZ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkv-Ox-Jgn">
+                                            <rect key="frame" x="16" y="29" width="88" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujj-Ub-tLh">
+                                            <rect key="frame" x="16" y="65" width="36.5" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="G0Q-8J-6YO"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="HV4-Ic-vFd" firstAttribute="leading" secondItem="YQD-x1-dft" secondAttribute="leading" constant="4" id="2kl-C3-TvT"/>
+                                        <constraint firstItem="U7C-M2-ffW" firstAttribute="leading" secondItem="wkv-Ox-Jgn" secondAttribute="leading" id="2wg-jC-dwd"/>
+                                        <constraint firstItem="U7C-M2-ffW" firstAttribute="top" secondItem="wkv-Ox-Jgn" secondAttribute="bottom" id="33P-Yd-1MX"/>
+                                        <constraint firstItem="wkv-Ox-Jgn" firstAttribute="top" secondItem="HV4-Ic-vFd" secondAttribute="bottom" id="5Ka-90-NRk"/>
+                                        <constraint firstAttribute="trailing" secondItem="wkv-Ox-Jgn" secondAttribute="trailing" constant="4" id="BIg-8e-Rez"/>
+                                        <constraint firstAttribute="trailing" secondItem="HV4-Ic-vFd" secondAttribute="trailing" constant="4" id="EtT-Ce-eXR"/>
+                                        <constraint firstItem="HV4-Ic-vFd" firstAttribute="top" secondItem="YQD-x1-dft" secondAttribute="top" constant="8" id="Mhq-ZW-9Ao"/>
+                                        <constraint firstItem="ujj-Ub-tLh" firstAttribute="leading" secondItem="U7C-M2-ffW" secondAttribute="leading" id="aTV-Xj-DGk"/>
+                                        <constraint firstItem="wkv-Ox-Jgn" firstAttribute="leading" secondItem="YQD-x1-dft" secondAttribute="leading" constant="16" id="nWI-8b-wXy"/>
+                                        <constraint firstItem="ujj-Ub-tLh" firstAttribute="top" secondItem="U7C-M2-ffW" secondAttribute="bottom" id="nh9-yt-19S"/>
+                                        <constraint firstAttribute="bottom" secondItem="ujj-Ub-tLh" secondAttribute="bottom" constant="8" id="sp1-JE-9q8"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="addressLabel" destination="wkv-Ox-Jgn" id="9nF-4C-FjS"/>
+                                    <outlet property="emailLabel" destination="ujj-Ub-tLh" id="jZn-Ee-jfM"/>
+                                    <outlet property="mobileLabel" destination="U7C-M2-ffW" id="bCa-6D-fIs"/>
+                                    <outlet property="nameLabel" destination="HV4-Ic-vFd" id="Mcg-cM-oRz"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="aGO-X0-yXZ" id="Uas-dG-OjR"/>
+                            <outlet property="delegate" destination="aGO-X0-yXZ" id="Ag0-Op-KGo"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="136-gH-8kg"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g3j-Vh-KlY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1023" y="82"/>
+            <point key="canvasLocation" x="518.84057971014499" y="812.94642857142856"/>
         </scene>
     </scenes>
     <resources>
